src/css/mod_screen.css
.mod-list tr th,
.mod-list tr td {
    vertical-align: baseline;
    color: #ffffff;
    text-align: left;
    padding-left: 0.5rem;
}

.header-row {
    border-radius: 10px 10px 0 0;
    background: #8395a7;
    height: 2.7rem;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header-row p {
    font-weight: 600;
    font-size: 1rem;
    text-align: left;
}

.mod-grid {
    display: flex;
    flex-direction: row;
    gap: 0rem;
    width: 100%;
    align-self: center;
    position: absolute;
    top: 41vh;
    transform: translateY(-30%);
}

.mod-table {
    border-radius: 10px;
    background: #576574;
    width: 95%;
    height: 30.3125rem;
}

.mod-subgrid {
    width: 75%;
    height: 100%;
    display: flex;
    justify-content: center;
}

.button-subgrid {
    display: flex;
    flex-direction: column;
    width: 25%;
    height: 100%;
    gap: 1rem;
    align-items: center;
}

.mod-action-button {
    all: unset;
    width: 80%;
    height: 2.5rem;
    text-align: center;
    color: #fff;
    font-size: 1rem;
    font-style: normal;
    font-weight: 500;
    line-height: normal;
    border-radius: 0.5rem;
    background: #54a0ff;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}

.divider-gap {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

